<resources>
    <string name="app_name">Mamasan_FoodBank</string>
    <string name="title_activity_replenishment_list">replenishment_list</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_onGoing">Ongoing</string>
    <string name="tab_text_booking">Booking</string>
    <string name="tab_text_completed">Completed</string>
    <string name="tab_text_canceled">Canceled</string>
    <string name="userName">Hon King Yann</string>
    <string name="campaign_title">Replenishment Title</string>
    <string name="campaign_food_title">Food Title</string>
    <string name="DateTime">Sat, Sep 24, 11:06 AM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="progress_quantity">20</string>
    <string name="unit_label">units</string>
    <string name="food_measurement">20</string>
    <string name="food_quantity">5</string>
    <string name="quantity_label">Quantity</string>
    <string name="sku_label">SKU</string>
    <string name="campaign_sku">kg</string>
    <string name="campaign_food_type">frozen food</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="title_activity_replenishment_reservation_list">replenishment_reservation_list
    </string>
    <string name="title_activity_replenishment_reservation">replenishment_reservation</string>
    <string name="main_txt_create_donor_account">Create Donor Account</string>
    <string name="main_txt_sign_in">Sign In</string>
    <string name="signup_txt_welcome1">Welcome to MAMASAN</string>
    <string name="donor_txt_welcome2">Fill up details to sign up as donor now!</string>
    <string name="donee_txt_welcome2">Fill up details to sign up as donee now!</string>
    <string name="donee_txt_welcome3">You will get verify by our staff soon</string>
    <string name="main_create_account">Create Account</string>
    <string name="campaign_detail">Blablabla</string>
    <string-array name="donorstatus">
        <item>Pending</item>
        <item>Rejected</item>
        <item>Approved</item>
    </string-array>
    <string-array name="booking_time">
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
    </string-array>
    <string-array name="food_donation_status">
        <item>Coming Soon</item>
        <item>Completed</item>
        <item>Cancelled</item>
    </string-array>
</resources>