<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/basic_margin"
    android:layout_marginBottom="@dimen/basic_margin"

    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/basic_margin"
        android:paddingEnd="@dimen/basic_margin"
        android:paddingBottom="@dimen/tiny_spacing">

        <androidx.cardview.widget.CardView
            android:id="@+id/replenishmentTitleCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardElevation="0dp">
            <TextView
                android:id="@+id/replenishmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/basic_margin"
                android:layout_marginBottom="@dimen/tiny_spacing"
                android:fontFamily="@font/roboto_black"
                android:text="@string/campaign_title"
                android:textColor="@color/color_2"
                android:textSize="@dimen/tiny_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:layout_marginTop="@dimen/tiny_spacing"
            android:background="@color/color_sperator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/replenishmentTitleCard" />


        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="@dimen/small_description"
            android:layout_height="@dimen/small_description"

            android:layout_marginTop="@dimen/basic_margin"
            android:layout_marginBottom="@dimen/tiny_spacing"
            app:layout_constraintBottom_toTopOf="@+id/replenishmentDescription"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:srcCompat="@drawable/ic_baseline_location_on_24"
            app:tint="@color/color_reject" />

        <TextView
            android:id="@+id/location"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:text="Kuala Lumpur Branch"
            android:textColor="@color/color_description"
            android:textSize="@dimen/tiny_description"
            app:layout_constraintBottom_toBottomOf="@+id/location_icon"
            app:layout_constraintStart_toEndOf="@+id/location_icon"
            app:layout_constraintTop_toTopOf="@+id/location_icon"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/replenishmentDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:textColor="@color/black"
            android:text="@string/description"
            android:textSize="@dimen/tiny_description"
            app:layout_constraintBottom_toTopOf="@id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="@dimen/tiny_spacing"
           />
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2sp"

            android:background="@color/color_sperator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/replenishmentDescription" />
        <TextView
            android:id="@+id/replenishment_dateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
android:textColor="@color/color_1"
            android:text="@string/DateTime"
            android:textSize="@dimen/tiny_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"

            android:layout_marginTop="@dimen/basic_margin"
            android:layout_marginBottom="@dimen/tiny_spacing"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
